Fix text layout and spacing

--- a/Birthday [6]/style.css
+++ b/Birthday [6]/style.css
@@ -56,21 +56,20 @@ img.birthday {
 }
 
 .text {
-  padding: 2em;
+  padding: 1em;
   color: #333;
-  text-align: center;
-  max-width: 800px;
-  margin: 0 auto;
+  text-align: left;
+  margin-left: 10%;
 }
 
 .text h1 {
-  margin-bottom: 1.5em;
-  font-size: 1.8em;
+  margin-bottom: 1em;
+  font-size: 1.5em;
 }
 
 .text p {
-  line-height: 1.6;
-  margin-bottom: 1em;
+  line-height: 1.4;
+  margin-bottom: 0.5em;
 }
 
 .muted {
